# nanodet-plus-ncnn-android

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: nanodet-plus-qr-416.param
app/src/main/cpp/: CMakeLists.txt  nanodetplus_ncnn.cpp
app/src/main/cpp/ncnn-20220701-android-vulkan/arm64-v8a/include/ncnn/: platform.h
app/src/main/cpp/ncnn-20220701-android-vulkan/armeabi-v7a/include/ncnn/: platform.h
app/src/main/cpp/ncnn-20220701-android-vulkan/x86_64/include/ncnn/: platform.h
app/src/main/java/com/example/nanodet_plus_ncnn/: MainActivity.java
app/src/main/java/com/example/nanodet_plus_ncnn/analysis/: FullImageAnalyse.java  FullScreenAnalyse.java
app/src/main/java/com/example/nanodet_plus_ncnn/detector/: NanodetplusNcnnDetector.java
app/src/main/java/com/example/nanodet_plus_ncnn/utils/: CameraProcess.java  ImageProcess.java  Recognition.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/nanodet_plus_ncnn/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
